# neutronium

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-build.sh  compile.sh  configure-cmake.sh  configure_cmake.sh  run.sh  test.sh
.github/workflows/: build-clang.yaml  build-gcc.yaml  build.yml  coverage.yaml  coverage.yml  test-clang-debug.yaml  test-clang.yaml  test-gcc.yaml  test.yml
.github/workflows/test/: clang.yaml  gcc.yaml
Neutronium.tmbundle/: info.plist
Neutronium.tmbundle/Syntaxes/: Neutronium.tmLanguage.json
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tests[1]_include.cmake
assets/Neutronium.tmbundle/Preferences/: Comments.tmPreferences
assets/Neutronium.tmbundle/Syntaxes/: Neutronium.tmLanguage.json
benchmark/: README.md  build_benchmark.py
benchmark/tests/general/: main.nt  variant_1.nt  variant_10.nt  variant_11.nt  variant_2.nt  variant_3.nt  variant_4.nt  variant_5.nt  variant_6.nt  variant_7.nt  variant_8.nt  variant_9.nt
docs/: language.md  syntax.md
docs/roadmap/: language-features.md
include/: DiagnosticsEngine.hpp  SourceManager.hpp  diagnostics_engine.hpp
include/AST/: AST.hpp  Debug.hpp
include/CodeGen/: Generator.hpp  SymbolTable.hpp
include/Lexer/: Lexer.hpp
include/Parser/: AST.hpp  Debug.hpp  Parser.hpp
include/Sema/: SemanticAnalyser.hpp  SymbolTable.hpp
include/Sema/Type/: Constraint.hpp  Trait.hpp  Type.hpp
include/Type/: Constraint.hpp  Trait.hpp  TypeManager.hpp  TypeSolver.hpp
include/generation/: Generator.hpp  SymbolTable.hpp  generator.hpp
include/lexing/: Lexer.hpp  lexer.hpp  source_location.hpp  token.hpp  token_kind.hpp  token_type.hpp
include/parsing/: AST.hpp  AST_nodes.hpp  Parser.hpp  ast.hpp  debug.hpp  operator.hpp  parser.hpp
include/semantic-analysis/: scope.hpp  semantic_analyser.hpp  symbol_table.hpp  type.hpp  types.hpp
include/semantic-analysis/types/: Constraint.hpp  Primitive.hpp  PrimitiveKind.hpp  PrimitiveType.hpp  PrimitiveTypeFamily.hpp  Trait.hpp  Type.hpp  TypeEngine.hpp  TypeInferrer.hpp  TypeManager.hpp  TypeSolver.hpp  type.hpp
include/source/: source_manager.hpp
include/utils/: log.hpp
runtime/: io.asm  math.nt
src/: Cli.cpp  Cli.hpp  cli.cpp  cli.hpp  diagnostics_engine.cpp  main.cpp  source_manager.cpp
src/AST/: AST.cpp  Debug.cpp
src/CodeGen/: Generator.cpp
src/Lexer/: Lexer.cpp  TokenKind.cpp
src/Parser/: AST.cpp  Debug.cpp  Parser.cpp
src/Sema/: SemanticAnalyser.cpp
src/Sema/types/: PrimitiveTypeFamily.cpp  Trait.cpp  Type.cpp  TypeSolver.cpp
src/Types/: PrimitiveTypeFamily.cpp  Trait.cpp  Type.cpp  TypeSolver.cpp
src/Utils/: Log.cpp
src/ast/: AST.cpp  AST.hpp  ASTArena.hpp  Debug.cpp  Debug.hpp
src/backend/: CodeGen.cpp  CodeGen.hpp  Reg.hpp
src/codegen/: Generator.cpp  Generator.hpp  SymbolTable.hpp
src/diagnostics/: Diagnostic.hpp  DiagnosticsEngine.cpp  DiagnosticsEngine.hpp  DiagnosticsPrinter.cpp  DiagnosticsPrinter.hpp
src/driver/: Cli.cpp  Cli.hpp  main.cpp
src/driver/utils/: Log.cpp  Log.hpp
src/frontend/ast/: AST.cpp  AST.hpp  Debug.cpp  Operator.hpp
src/frontend/diagnostics/: Diagnostic.hpp  DiagnosticsEngine.hpp  DiagnosticsPrinter.hpp
src/frontend/lex/: Lexer.cpp  Lexer.hpp  Token.hpp  TokenKind.hpp
src/frontend/lower/: ASTLowerer.cpp  ASTLowerer.hpp
src/frontend/parse/: Parser.cpp  Parser.hpp  ParsingError.cpp
src/frontend/sema/: SemanticAnalyser.cpp  SemanticAnalyser.hpp  SymbolTable.hpp
src/frontend/source/: FileID.hpp  SourceFile.cpp  SourceManager.cpp  SourceManager.hpp
src/frontend/type/: Primitive.hpp  PrimitiveTypeFamily.hpp  Trait.cpp  Trait.hpp  Type.cpp  Type.hpp  TypeID.hpp  TypeManager.hpp
src/frontend/type/inference/: Constraint.hpp  TypeSolver.cpp  TypeSolver.hpp  TypeSolvingError.cpp
src/generation/: Generator.cpp  generator.cpp
src/ir/core/: IR.hpp  Type.hpp
src/lex/: Lexer.cpp  Lexer.hpp  Token.hpp  TokenKind.cpp  TokenKind.hpp
src/lexer/: Lexer.cpp  Lexer.hpp  Token.hpp  TokenKind.cpp
src/lexing/: Lexer.cpp  TokenKind.cpp  lexer.cpp  token_kind.cpp  token_type.cpp
src/lib/: FastStringStream.hpp  FastStringView.hpp  PolymorphicArenaAllocator.hpp  SpecializedArenaAllocator.hpp  StringSwitch.hpp
src/parse/: Parser.cpp  Parser.hpp  ParsingError.cpp
src/parser/: Parser.cpp  Parser.hpp
src/parsing/: AST.cpp  AST_nodes.cpp  Parser.cpp  ast.cpp  debug.cpp  log-ast.cpp  log_ast.cpp  parser.cpp
src/sema/: SemanticAnalyser.cpp  SemanticAnalyser.hpp  SymbolTable.hpp
src/semantic-analysis/: semantic_analyser.cpp  type.cpp
src/semantic-analysis/types/: PrimitiveTypeFamily.cpp  Trait.cpp  Type.cpp  TypeSolver.cpp
src/source/: FileID.hpp  SourceFile.cpp  SourceManager.cpp  SourceManager.hpp  source_manager.cpp
src/type/: Constraint.hpp  Primitive.hpp  PrimitiveTypeFamily.cpp  PrimitiveTypeFamily.hpp  Trait.cpp  Trait.hpp  Type.cpp  Type.hpp  TypeArena.hpp  TypeManager.hpp  TypeSolver.cpp  TypeSolver.hpp
src/type/inference/: Constraint.hpp  TypeSolver.cpp  TypeSolver.hpp  TypeSolvingError.cpp
src/utils/: Log.cpp  Log.hpp  log.cpp
tests/: CliTests.cpp  CompilationError.cpp  ExecutionTest.cpp  LexerTests.cpp  StdLibraryTests.cpp  cli_error.cpp  cli_tests.cpp  compilation_error.cpp  execution_test.cpp  std_library_tests.cpp  test_lexer.cpp
tests/common/: Tester.hpp  tester.hpp
